Refactored code. Added exceptions when passing invalid pointers and when program cannot allocate memory. Updated functions that provide user interface and replaced in another header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.15)
 project(task1_StrList)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(task1_StrList main.cpp MyList.cpp MyList.h)
+add_executable(task1_StrList main.cpp MyList.cpp MyList.h helper.h)
